@@ -1,3 +1,9 @@
+2007-10-09  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* generic/tkImage.c:     Make Ttk_GetImage safe if called with NULL
+	* tests/ttk/image.test:  interp. Added some tests that crash
+	                         on Windows without this fix.
+	
 2007-10-02  Don Porter  <dgp@users.sourceforge.net>
 
 	[core-stabilizer-branch]
